local and remote d1

--- a/crates/theone-balance/wrangler.jsonc
+++ b/crates/theone-balance/wrangler.jsonc
@@ -6,11 +6,14 @@
     "build": {
         "command": "cargo install -q worker-build && worker-build --release"
     },
+    "ai": {
+        "binding": "AI"
+    },
     "d1_databases": [
         {
             "binding": "DB",
             "database_name": "one-balance",
-            "database_id": "",
+            "database_id": "xfefef",
             "migrations_dir": "migrations"
         }
     ],
@@ -28,7 +31,9 @@
         ]
     },
     "vars": {
-        "AUTH_KEY": "local-auth-key",
-        "AI_GATEWAY_TOKEN": "local-ai-gateway-token"
+        "AUTH_KEY": "my-auth-key",
+        "AI_GATEWAY": "one-balance",
+        "CLOUDFLARE_ACCOUNT_ID": "YOUR_ACCOUNT_ID_HERE",
+        "CLOUDFLARE_API_TOKEN": "xxxxx"
     }
 }
