--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "one-balance-rust"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 crate-type = ["cdylib"]
 
 [features]
 # By default, we will use the recommended pattern: a Durable Object with its internal SQLite DB.
-default = ["raw_d1"]
+default = ["raw_d1", "axumrouter"]
 
 # --- Router Features ---
 axumrouter = ["axum", "http", "http-body", "tower-service"]
@@ -30,12 +30,11 @@ do_d1 = ["worker/d1"]
 worker = { version ="0.6", default-features = false, features = ["d1", "http", "axum", "timezone", "queue"] }
 #worker = { path = "../../workers-rs/worker", default-features = false, features = ["d1", "http", "axum", "timezone", "queue"] }
 
+worker-macros = { version ="0.6", default-features = false, features = ["http"] }
 # Serialization and Deserialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# HTTP Client to call Google APIs
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 
 # Error Handling
 anyhow = "1.0"
@@ -49,16 +48,26 @@ console_error_panic_hook = "0.1.7"
 uuid = { version = "1.8", features = ["v4", "js"] }
 url = "2.5"
 js-sys = "0.3"
-rand = "0.8"
-phf = { version = "0.11", features = ["macros"] }
-getrandom = { version = "0.2", features = ["js"] }
+rand = "0.9"
+phf = { version = "0.12", features = ["macros"] }
+getrandom = { version = "0.3", features = ["wasm_js"] }
+#getrandom = { version = "0.2", features = ["js"] }
 
 
 # --- Optional Axum Dependencies ---
-axum = { version = "0.8", optional = true }
+# axum = { version = "0.8", optional = true }
+axum = { version = "0.8", default-features = false, optional = true, features = ["macros", "form", "query"] }
 http = { version = "1.3", optional = true }
 http-body = { version = "1.0", optional = true }
 tower-service = { version = "0.3", optional = true }
+
+# UI Dependencies
+maud = { version = "0.27", features = ["axum"] }
+tower-cookies = "0.11"
+time = "0.3"
+
+
+
 
 
 [profile.release]
