--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -56,7 +56,7 @@ getrandom = { version = "0.3", features = ["wasm_js"] }
 
 # --- Optional Axum Dependencies ---
 # axum = { version = "0.8", optional = true }
-axum = { version = "0.8", default-features = false, optional = true, features = ["macros", "form", "query"] }
+axum = { version = "0.8", default-features = false, optional = true, features = ["macros", "form", "query", "json"] }
 http = { version = "1.3", optional = true }
 http-body = { version = "1.0", optional = true }
 tower-service = { version = "0.3", optional = true }
