--- a/crates/theone-balance/package.json
+++ b/crates/theone-balance/package.json
@@ -6,8 +6,9 @@
     "init:config": "node -e \"require('fs').copyFileSync('wrangler.jsonc.tpl', 'wrangler.jsonc')\"",
     "pre-deploy": "node pre-deploy.mjs",
     "pre-dev": "node pre-dev.mjs",
+    "db:find": "find .wrangler/state/v3/d1 -name '*.sqlite' | head -1",
     "dev": "pnpm init:config && pnpm pre-dev && pnpm migrate && wrangler dev --port 8087",
-    "migrate": "geni up",
+    "migrate": "DATABASE_URL=sqlite://$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -name '*.sqlite' | head -1) geni up",
     "migrate:new": "geni new",
     "migrate:remote": "geni up",
     "deploy": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy",
