--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -51,6 +51,7 @@ js-sys = "0.3"
 rand = "0.9"
 phf = { version = "0.12", features = ["macros"] }
 getrandom = { version = "0.3", features = ["wasm_js"] }
+once_cell = "1.19"
 #getrandom = { version = "0.2", features = ["js"] }
 
 
