--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -66,7 +66,7 @@ tower-service = { version = "0.3", optional = true }
 maud = { version = "0.27", features = ["axum"] }
 tower-cookies = "0.11"
 time = "0.3"
-toasty = { path = "../toasty/crates/toasty" }
+toasty = { path = "../toasty/crates/toasty", features = ["serde"] }
 toasty-core = { path = "../toasty/crates/toasty-core" }
 toasty-sql = { path = "../toasty/crates/toasty-sql" }
 
