--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -67,7 +67,10 @@ tower-service = { version = "0.3", optional = true }
 # UI Dependencies
 maud = { version = "0.27", features = ["axum"] }
 tower-cookies = "0.11"
-time = "0.3"
+time = { version = "0.3", features = ['wasm-bindgen'] }
+
+
+
 toasty = { path = "../toasty/crates/toasty", features = ["serde"] }
 toasty-core = { path = "../toasty/crates/toasty-core" }
 toasty-sql = { path = "../toasty/crates/toasty-sql" }
