--- a/crates/theone-balance/package.json
+++ b/crates/theone-balance/package.json
@@ -12,10 +12,11 @@
 
     "migrate": "DATABASE_URL=sqlite://$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -name '*.sqlite' | head -1) geni up",
     "migrate:new": "geni new",
-    "migrate:remote": "geni up",
-    "deploy": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy",
+    "migrate:remote": "wrangler exec -- geni up",
+    "deploy": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy -- --features 'raw_d1,axumrouter,wait_until'",
+    "deploy:queue": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy -- --no-default-features --features 'raw_d1,axumrouter,use_queue'",
     "deploy:dry-run": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy --dry-run",
-    "deploy:reset": "pnpm deploy && wrangler d1 execute one-balance --remote --command \"UPDATE keys SET status = 'active',model_coolings = '{}', total_cooling_seconds = 0;\""
+    "deploy:reset": "pnpm deploy && wrangler d1 execute $(node -p 'require(\"./wrangler.jsonc\").d1_databases[0].database_name') --remote --command \"UPDATE keys SET status = 'active',model_coolings = '{}', total_cooling_seconds = 0;\""
   },
   "devDependencies": {
     "wrangler": "4.26.1",
