--- a/crates/theone-balance/package.json
+++ b/crates/theone-balance/package.json
@@ -8,11 +8,11 @@
     "pre-dev": "node pre-dev.mjs",
     "db:find": "find .wrangler/state/v3/d1 -name '*.sqlite' | head -1",
     "dev": "pnpm init:config && pnpm pre-dev && pnpm migrate && wrangler dev --local --no-bundle --port 8087",
-    "dev-queue": "pnpm init:config && pnpm pre-dev && pnpm migrate && wrangler dev --local --no-bundle --port 8087 -- -v --no-default-features --features 'raw_d1,axumrouter,use_queue'",
+    "dev-queue": "pnpm init:config && pnpm pre-dev && pnpm migrate && wrangler dev --local --no-bundle --port 8087 -- -v --no-default-features --features 'raw_d1,axumrouter,use_queue,tracing-worker'",
     "migrate": "drizzle-kit generate && wrangler d1 migrations apply $(node -p 'require(\"jsonc-parser\").parse(require(\"fs\").readFileSync(\"./wrangler.jsonc\", \"utf8\")).d1_databases[0].database_name') --local",
     "migrate:remote": "drizzle-kit generate && wrangler d1 migrations apply $(node -p 'require(\"jsonc-parser\").parse(require(\"fs\").readFileSync(\"./wrangler.jsonc\", \"utf8\")).d1_databases[0].database_name') --remote",
     "deploy": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy -- --features 'raw_d1,axumrouter,wait_until'",
-    "deploy:queue": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy -- --no-default-features --features 'raw_d1,axumrouter,use_queue'",
+    "deploy:queue": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy -- --no-default-features --features 'raw_d1,axumrouter,use_queue,tracing-worker'",
     "deploy:dry-run": "pnpm init:config && pnpm pre-deploy && pnpm migrate:remote && wrangler deploy --dry-run",
     "deploy:reset": "pnpm deploy && wrangler d1 execute $(node -p 'require(\"jsonc-parser\").parse(require(\"fs\").readFileSync(\"./wrangler.jsonc\", \"utf8\")).d1_databases[0].database_name') --remote --command \"UPDATE keys SET status = 'active',model_coolings = '{}', total_cooling_seconds = 0;\""
   },
