--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -53,6 +53,7 @@ worker-macros = { version ="0.6", default-features = false, features = ["http"] 
 # Serialization and Deserialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_urlencoded = "0.7"
 
 
 # Error Handling
@@ -87,6 +88,7 @@ tower-service = { version = "0.3", optional = true }
 maud = { version = "0.27", features = ["axum"] }
 tower-cookies = "0.11"
 time = { version = "0.3", features = ['wasm-bindgen'] }
+base64 = "0.22"
 
 
 
@@ -99,6 +101,10 @@ clap = { version = "4.5", features = ["derive", "env"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
 reqwest = { version = "0.12", features = ["json"], optional = true }
 
+
+[dev-dependencies]
+axum-test = "15.1"
+mockito = "1.4"
 
 [[bin]]
 name = "sync-cli"
