--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -120,7 +120,7 @@ required-features = ["sync_cli"]
 [profile.release]
 lto = true
 strip = true
-opt-level = "s"
+opt-level = "z"
 # [profile.release]
 # debug = true
 # strip = false
@@ -128,5 +128,5 @@ opt-level = "s"
 # [package.metadata.wasm-pack.profile.release]
 # wasm-opt = false
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
+wasm-opt = ["-Oz", "--strip-debug", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
 
