--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -74,6 +74,7 @@ rand = "0.9"
 phf = { version = "0.12", features = ["macros"] }
 getrandom = { version = "0.3", features = ["wasm_js"] }
 once_cell = "1.19"
+moka = { version = "0.12", features = ["future"] }
 #getrandom = { version = "0.2", features = ["js"] }
 
 
