--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -74,7 +74,7 @@ rand = "0.9"
 phf = { version = "0.12", features = ["macros"] }
 getrandom = { version = "0.3", features = ["wasm_js"] }
 once_cell = "1.19"
-moka = { version = "0.12", features = ["future"] }
+mini-moka = { path = "../mini-moka", features = ["sync"] }
 #getrandom = { version = "0.2", features = ["js"] }
 
 
