--- a/crates/theone-balance/Cargo.toml
+++ b/crates/theone-balance/Cargo.toml
@@ -104,6 +104,7 @@ toasty-sql = { path = "../toasty/crates/toasty-sql" }
 clap = { version = "4.5", features = ["derive", "env"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
 reqwest = { version = "0.12", features = ["json"], optional = true }
+dotenvy = "0.15"
 
 
 [dev-dependencies]
